changes in summary spelling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section>
     <div class="container">
       <div class="plan-details">
-        <p class="title">Order Summery</p>
+        <p class="title">Order Summary</p>
         <p class="description">You can now listen to millions of songs, audiobooks, and podcasts on any
           device anywhere you like!</p>
         <div class="inside-box">
